DNS-PERSIST-01 and HTTP-01 support